prodmind/packages/parser/src/__tests__/fixtures/architectures/invalid-boundary-system/business/user-admin.ts
import { DatabaseConnection } from '../infra/database';

const db = new DatabaseConnection();

export function hardDeleteUser(userId: string): void {
  db.query(`DELETE FROM users WHERE id = ?`, [userId]);
}
